--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "6.28.2",
+    "recharts": "^2.15.0",
     "tailwind-merge": "2.6.0",
     "tailwindcss-animate": "1.0.7",
     "zod": "^3.24.1"
