--- a/package.json
+++ b/package.json
@@ -19,17 +19,20 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "2.1.1",
     "framer-motion": "11.18.0",
     "lucide-react": "^0.471.2",
     "mini-svg-data-uri": "1.4.4",
+    "next-themes": "^0.4.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "6.28.2",
     "recharts": "^2.15.0",
+    "sonner": "^1.7.2",
     "tailwind-merge": "2.6.0",
     "tailwindcss-animate": "1.0.7",
     "zod": "^3.24.1"
